[gd_scene load_steps=7 format=3 uid="uid://11kelrsxmpor"]

[ext_resource type="Script" path="res://scenes/guis/settings_menu/settings_menu.gd" id="1_1k3ea"]
[ext_resource type="Script" path="res://scenes/guis/settings_menu/MasterVolSlider.gd" id="3_h0yp1"]
[ext_resource type="Script" path="res://scenes/guis/settings_menu/MusicVolSlider.gd" id="3_nq28o"]
[ext_resource type="Script" path="res://scenes/guis/settings_menu/VSyncBtn.gd" id="4_yi35f"]
[ext_resource type="Script" path="res://scenes/guis/settings_menu/FxVolSlider.gd" id="5_m15g6"]
[ext_resource type="Script" path="res://scenes/guis/settings_menu/CBButton.gd" id="6_n17vr"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1k3ea")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.203922, 0.25098, 1)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.5
offset_top = -327.5
offset_right = 456.5
offset_bottom = 327.5
grow_horizontal = 2
grow_vertical = 2
current_tab = 1

[node name="Audio" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="TabContainer/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 25
columns = 2

[node name="MasterVolLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("3_h0yp1")

[node name="MusicVolLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("3_nq28o")

[node name="FxVolLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Sound Fx Volume"

[node name="FxVolSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_m15g6")

[node name="Video" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="TabContainer/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 25
columns = 2

[node name="HCLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "High Contrast"

[node name="HCBtn" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
alignment = 2

[node name="CBLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Colorblind Mode"

[node name="CBButton" type="OptionButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Deuteranopia"
popup/item_1/id = 1
popup/item_2/text = "Protanopia"
popup/item_2/id = 2
popup/item_3/text = "Tritanopia"
popup/item_3/id = 3
script = ExtResource("6_n17vr")

[node name="VSyncLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "VSync"

[node name="VSyncBtn" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
script = ExtResource("4_yi35f")

[node name="Exit" type="Button" parent="."]
custom_minimum_size = Vector2(380, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -227.0
offset_top = -180.0
offset_right = 227.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 10
text = "settings.exit-save"

[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/MasterVolSlider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/FxVolSlider" to="." method="_on_fx_vol_slider_value_changed"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/GridContainer/HCBtn" to="." method="_on_hc_btn_toggled"]
[connection signal="item_selected" from="TabContainer/Video/MarginContainer/GridContainer/CBButton" to="." method="_on_cb_button_item_selected"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/GridContainer/VSyncBtn" to="." method="_on_v_sync_btn_toggled"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
